[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/minimap.png" type="Texture" id=1]
[ext_resource path="res://screens/alarm_selector.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minimap" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.729412 )
texture = ExtResource( 1 )
centered = false

[node name="Button" type="Button" parent="minimap"]
margin_left = 163.699
margin_top = 100.392
margin_right = 176.699
margin_bottom = 114.392
focus_mode = 0
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="minimap"]
margin_left = 238.811
margin_top = 227.705
margin_right = 251.811
margin_bottom = 241.705
focus_mode = 0
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="minimap"]
margin_left = 122.174
margin_top = 209.852
margin_right = 135.174
margin_bottom = 223.852
focus_mode = 0
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="minimap/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="minimap/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="minimap/Button3" to="." method="_on_Button3_pressed"]
